# CHAOZI_OTA_PROJECT

./: .mxproject  CMakeCache.txt  CMakeLists.txt  Makefile  OTA.ioc  cmake_install.cmake
Core/Inc/: delay.h  main.h  stm32f1xx_hal_conf.h
Core/Src/: delay.c  main.c
Drivers/BSP/24CXX/: CMakeLists.txt
Drivers/BSP/24CXX/inc/: 24cxx.h
Drivers/BSP/24CXX/src/: 24cxx.c
Drivers/BSP/IIC/: CMakeLists.txt
Drivers/BSP/IIC/inc/: myiic.h
Drivers/BSP/IIC/src/: myiic.c
Drivers/BSP/NORFLASH/: CMakeLists.txt
Drivers/BSP/NORFLASH/inc/: norflash.h
Drivers/BSP/NORFLASH/src/: norflash.c
Drivers/BSP/OTA_UART/: CMakeLists.txt
Drivers/BSP/OTA_UART/inc/: ota_uart.h
Drivers/BSP/OTA_UART/src/: ota_uart.c
Drivers/BSP/SPI/: CMakeLists.txt
Drivers/BSP/SPI/inc/: spi.h
Drivers/BSP/SPI/src/: spi.c
Drivers/BSP/STMFLASH/: CMakeLists.txt
Drivers/BSP/STMFLASH/inc/: stmflash.h
Drivers/BSP/STMFLASH/src/: stmflash.c
Drivers/BSP/bootloader/: CMakeLists.txt
Drivers/BSP/bootloader/inc/: bootloader.h
Drivers/BSP/bootloader/src/: bootloader.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
